submit java-oop-ru/inheritance